# StreamStoryPyClient

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
streamstory/: entities.py  model.py
streamstory/examples/: main.py
streamstory/examples/data/: river_flow.csv
