[tool.poetry]
name = "streamstory"
version = "0.0.1"
description = ""
authors = ["jansturm1 <jansturm1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.2"
numpy = "1.26.4"
python-dotenv = "^1.0.1"
dacite = "^1.8.1"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
